# entryway

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  settings.json
entryway/clis/: setup.py
entryway/data/: plugins.yaml
entryway/models/: hook_data.py
entryway/notifier/: cli.py  models.py  notifier.py
entryway/persistence/: yaml_store.py
scripts/: session-start-loader.sh
src/entryway/clis/: slash_command.py  status_line.py
src/entryway/hook_utils/: slash_command_parser.py
src/entryway/notifier/: hooks.py
tests/: test_slash_command.sh  test_status_line.sh
